app/src/test/resources/programs/valid/variables/BasicOperationsOverVariables.extension
foo main() -> Int = {
    let kUniversalConstant: Int = 42;

    let mut a: Int = 5;
    a += kUniversalConstant;
    a = a + a;
    a = a + kUniversalConstant;

    a -= 103;
    a = a - kUniversalConstant;

    a *= 2;
    a = a * a;

    // a should be 324

    let mut flag: Bool = a > kUniversalConstant;
    flag = not flag;

    // flag should be false
}
