app/src/test/resources/programs/invalid/foonctions/variableAndFunctionSameNames.extension
foo g() -> Int = 12;

foo main() -> Int = {
    var g: Int = 42;
    g()
}
